01-Network_Policies/allow-Ingress-nscassandra-from-nsdefault-backend.yaml
# Allow incoming traffic coming from namespace=default, pod=backend
# to namespace=cassandra, pod=cassandra
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nscassandra-from-nsdefault-backend
  namespace: cassandra
spec:
  podSelector:
    matchLabels:
      run: cassandra
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
